# umba-enum-gen

./: .gitignore  .set_sln.bat  CMakeLists.txt  README.md  README.md_  _gen-doc.bat  _precommit.bat  deploy.bat  set_sln.bat  set_sln_exes.bat  test-util-tpl.bat  umba-brief-scanner.rsp  umba-enum-gen-help.bat  umba-enum-gen-msvc2019.sln  umba-enum-gen.sln
.msvc2019/: umba-enum-gen.vcxproj
_distr_conf/conf/: umba-enum-gen.options
_distr_conf/conf/umba-enum-gen/cpp/: default.txt
_libs/: .gitignore  _clone_libs.bat  _git-job-impl.bat
_prj_msvc/: console_app.vcxproj.template  umba-enum-gen.vcxproj
_src/: AppConfig.h  app_ver_config.h  arg_parser.h  log.h  print_ver.h  umba-enum-gen.cpp  utils.h
conf/: umba-enum-gen.options
conf/translations/: common-en-US.json  common-ru-RU.json
conf/umba-enum-gen/cpp/: default.txt  description-map.txt
doc/: Index.md  sources-stat-by-percent.md  sources-stat-by-percent.txt  sources-stat.md  sources-stat.txt  umba-enum-gen-cli-options.md  umba-enum-gen-cli-options.md_  Исходные тексты.md  Исходные тексты.md_  Списки замечаний в исходном коде.md
doc/_md/: _found-attentions.md  _found-notes.md  _found-see-also.md  _found-todos.md  _found-undones.md  _found-warnings.md  entry_points.md_  sources-stat-by-percent.md_  sources-stat-by-percent.txt  sources-stat.md_  sources-stat.txt  sources_brief.md_
src/: app_ver_config.h  arg_parser.h  umba-enum-gen.cpp
tests/: .gitignore
